objects/RecurringBusinessPicklistMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Picklist Value Mapping for Recurring Business</description>
    <fields>
        <fullName>RBFieldAPI__c</fullName>
        <label>Field API</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RBNewValue__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RBOldValue__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RecurringBusinessPicklistMappings</label>
    <listViews>
        <fullName>View_All_Data</fullName>
        <columns>NAME</columns>
        <columns>RBFieldAPI__c</columns>
        <columns>RBOldValue__c</columns>
        <columns>RBNewValue__c</columns>
        <filterScope>Everything</filterScope>
        <label>View All Data</label>
        <language>en_US</language>
    </listViews>
</CustomObject>